--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.gitignore.io/api/java,gradle,maven,eclipse,intellij
 # Edit at https://www.gitignore.io/?templates=java,gradle,maven,eclipse,intellij
 
+config/
+
 ### Eclipse ###
 .metadata
 bin/
