--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/foodnet?serverTimezone=UTC&useSSL=false
 spring.datasource.username= admin
-spring.datasource.password= enteryourpass
+spring.datasource.password= enteryourpassword
