--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.gitignore.io/?templates=java,gradle,maven,eclipse,intellij
 
 ./config/
+*.properties
 
 ### Eclipse ###
 .metadata
